tests/ui/basic/assert_message.rs
use metamatch::eval;

fn main() {
    eval! {
        assert!(false, "lul: {21*2}")
    };
}
